--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     font-size: 75px;
   }
   body{
-    background-image: url(https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTEyMjJfMjUy%2FMDAxNTc2OTc4MjczNTE2.ic82YbWUy42vDyhjAti5w4YqrIlDKNTFtIp75pLLYvIg.dUdcYeqLYvrTxdXS2U0EO01E8mwreY_H1sIjlMhS6Rog.JPEG.sjn1203%2F1576978274487.jpg&type=sc960_832);
+    background-image: url(https://mblogthumb-phinf.pstatic.net/20111023_227/bono1253_1319357437403RW5KF_GIF/cookofking.gif?type=w800);
     background-repeat:no-repeat;
     background-size: 1500px;
     background-position-x: center;
