--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ img {
   margin : auto;
   margin-inline: auto;
   border: 10px solid #07e9de;
+	opacity: 50%;
 	width: 200px; 
 	height: 200px;
 }
