--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img {
   display : inline;
   margin : auto;
   margin-inline: auto;
-  border: 10px solid #07e9de;
+  border: 10px solid #C0C0C0;
 	opacity: 80%;
 	width: 200px; 
 	height: 200px;
